--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Org Chart DDC</title>
 
-  <!-- Required DDC utility libraries -->
   <script type="text/javascript" src="contentUtil.js"></script>
   <script type="text/javascript" src="messagingUtil.js"></script>
-
-  <!-- D3 Library -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
 
   <style>
@@ -61,7 +58,9 @@
         .data(root.links())
         .enter().append("path")
         .attr("class", "link")
-        .attr("d", d3.linkVertical().x(d => d.x).y(d => d.y));
+        .attr("d", d3.linkVertical()
+          .x(d => d.x)
+          .y(d => d.y));
 
       const node = g.selectAll(".node")
         .data(root.descendants())
@@ -85,22 +84,17 @@
     function transformData(data) {
       const stateMap = {};
       data.forEach(row => {
-        const state = row.find(col => col.column === "state")?.rawValue || "Unknown";
-        const category = row.find(col => col.column === "category")?.rawValue || "Unknown";
-        const quantity = parseFloat(row.find(col => col.column === "quantity")?.rawValue) || 0;
-
+        const { state, category, quantity } = row;
         if (!stateMap[state]) {
           stateMap[state] = { name: state, children: [], value: 0 };
         }
-        stateMap[state].children.push({ name: category, value: quantity });
-        stateMap[state].value += quantity;
+        stateMap[state].children.push({ name: category, value: +quantity });
+        stateMap[state].value += +quantity;
       });
-      const result = {
+      return {
         name: "All Products",
         children: Object.values(stateMap)
       };
-      console.log("[TRANSFORM] Final structured data:", result);
-      return result;
     }
 
     function fallbackChart() {
@@ -110,9 +104,9 @@
         children: [
           { name: "MN", value: 5000, children: [{ name: "Edible", value: 5000 }] },
           { name: "IL", value: 18000, children: [
-              { name: "Flower", value: 10000 },
-              { name: "Vape", value: 8000 }
-            ] }
+            { name: "Flower", value: 10000 },
+            { name: "Vape", value: 8000 }
+          ]}
         ]
       });
     }
@@ -125,32 +119,37 @@
 
         va.messagingUtil.setOnDataReceivedCallback((data) => {
           console.log("[DATA RECEIVED]", data);
-          try {
-            const rows = data.resultData;
-            if (!rows || rows.length === 0) {
-              console.warn("[WARN] No data received.");
-              fallbackChart();
-              return;
-            }
 
-            // Add column names to each cell
-            const cols = data.columns.map(col => col.name);
-            const clean = rows.map(row => row.map((cell, i) => ({
-              ...cell,
-              column: cols[i]
-            })));
-
-            const rootData = transformData(clean);
-            drawChart(rootData);
-          } catch (err) {
-            console.error("[ERROR] Failed to process data:", err);
+          if (!data || !data.resultData || !data.columns) {
+            console.warn("[WARN] No usable data. Falling back.");
             fallbackChart();
+            return;
           }
+
+          const colNames = data.columns.map(c => c.name.toLowerCase());
+          const stateIdx = colNames.indexOf("state");
+          const categoryIdx = colNames.indexOf("category");
+          const quantityIdx = colNames.indexOf("quantity");
+
+          if (stateIdx === -1 || categoryIdx === -1 || quantityIdx === -1) {
+            console.error("[ERROR] Column mapping failed.");
+            fallbackChart();
+            return;
+          }
+
+          const clean = data.resultData.map(row => ({
+            state: row[stateIdx]?.rawValue || "Unknown",
+            category: row[categoryIdx]?.rawValue || "Unknown",
+            quantity: +row[quantityIdx]?.rawValue || 0
+          }));
+
+          const rootData = transformData(clean);
+          drawChart(rootData);
         });
 
         va.messagingUtil.postInitializationMessage();
       } else {
-        console.warn("[WARN] VA object not found. Fallback mode.");
+        console.warn("[WARN] VA object not available. Showing fallback.");
         fallbackChart();
       }
     }
