--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Org Chart DDC</title>
 
-  <script type="text/javascript" src="contentUtil.js"></script>
-  <script type="text/javascript" src="messagingUtil.js"></script>
+  <script type="text/javascript" src="https://kanthracharla.github.io/orgchart-ddc/contentUtil.js"></script>
+  <script type="text/javascript" src="https://kanthracharla.github.io/orgchart-ddc/messagingUtil.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
 
   <style>
