--- a/index.html
+++ b/index.html
@@ -135,13 +135,12 @@
           console.log("[DATA RECEIVED]", data);
           console.log("[DEBUG] Columns:", data.columns);
           console.log("[DEBUG] Result Data:", data.resultData);
-          console.log("[FULL PAYLOAD]", JSON.stringify(data, null, 2));
 
           try {
-            const colNames = data.columns.map(c => c.name.toLowerCase().trim());
-            const idxState = colNames.findIndex(n => n.includes("state"));
-            const idxCategory = colNames.findIndex(n => n.includes("category"));
-            const idxQuantity = colNames.findIndex(n => n.includes("quantity"));
+            const colNames = data.columns.map(c => c.name.toLowerCase());
+            const idxState = colNames.indexOf("state");
+            const idxCategory = colNames.indexOf("category");
+            const idxQuantity = colNames.indexOf("quantity");
 
             if (idxState === -1 || idxCategory === -1 || idxQuantity === -1) {
               console.warn("[WARN] One or more expected columns (state, category, quantity) not found.");
@@ -150,17 +149,19 @@
             }
 
             const rows = data.resultData;
-            if (!rows || rows.length === 0) {
-              console.warn("[WARN] No data received.");
-              fallbackChart();
-              return;
-            }
-
             const clean = rows.map(r => ({
               state: r[idxState]?.rawValue || r[idxState]?.formattedValue || "Unknown",
               category: r[idxCategory]?.rawValue || r[idxCategory]?.formattedValue || "Unknown",
               quantity: parseFloat(r[idxQuantity]?.rawValue || r[idxQuantity]?.formattedValue || 0)
             }));
+
+            console.log("[DEBUG] Cleaned Data:", clean);
+
+            if (!clean.length) {
+              console.warn("[WARN] Clean array is empty. Falling back.");
+              fallbackChart();
+              return;
+            }
 
             const rootData = transformData(clean);
             drawChart(rootData);
